Cambio en acentuaciones

--- a/demo/src/main/resources/templates/productos.html
+++ b/demo/src/main/resources/templates/productos.html
@@ -440,7 +440,7 @@
                                     <th>Precio Venta</th>
                                     <th>Cantidad en stock</th>
                                     <th>Proveedor(es)</th>
-                                    <th>Borrar</th>
+                                    <th>Eliminar</th>
                                     <th>Editar</th>
                                 </tr>
                             </thead>
