--- a/demo/src/main/resources/templates/proveedores.html
+++ b/demo/src/main/resources/templates/proveedores.html
@@ -423,10 +423,10 @@
                                     <tr>
                                         <th>Nombre</th>
                                         <th>Contacto Principal</th>
-                                        <th>Telefono</th>
+                                        <th>Teléfono</th>
                                         <th>Email</th>
                                         <th>Dirección</th>
-                                        <th>Borrar</th>
+                                        <th>Eliminar</th>
                                         <th>Editar</th>
                                     </tr>
                                 </thead>
@@ -512,7 +512,7 @@
                 <label>Contacto Principal:<br>
                     <input type="text" id="ContactoPrincipalEdit" name="contacto_principal" required>
                 </label><br>
-                <label>Telefono:<br>
+                <label>Teléfono:<br>
                     <input type="text" id="TelefonoEdit" name="telefono" required>
                 </label><br>
                 <label>Correo Electrónico:<br>
